--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 
-title: Testing the Piggies
-description: Website
+title: Digital Service Programme
+description: Temporary Pages for TU Delft Library Programme
 
 # Build settings
 theme: minima
